@@ -1,18 +1,19 @@
 package com.lovetropics.minigames.client.lobby.manage.screen.game_list;
 
-import com.google.common.collect.ImmutableList;
 import com.lovetropics.minigames.client.lobby.state.ClientGameDefinition;
 import com.lovetropics.minigames.client.screen.TrimmedText;
 import com.lovetropics.minigames.client.screen.flex.Layout;
 import com.lovetropics.minigames.client.screen.list.AbstractLTList;
 import com.lovetropics.minigames.client.screen.list.LTListEntry;
 import com.lovetropics.minigames.common.core.game.util.GameTexts;
-import com.mojang.blaze3d.vertex.PoseStack;
-import com.mojang.blaze3d.vertex.Tesselator;
 import net.minecraft.client.gui.Font;
+import net.minecraft.client.gui.GuiGraphics;
 import net.minecraft.client.gui.screens.Screen;
+import net.minecraft.network.chat.CommonComponents;
 import net.minecraft.network.chat.Component;
-import net.minecraft.network.chat.Component;
+import net.minecraft.util.CommonColors;
+
+import java.util.List;
 
 public abstract class AbstractGameList extends AbstractLTList<AbstractGameList.Entry> {
 	private final Component title;
@@ -32,12 +33,13 @@ public abstract class AbstractGameList extends AbstractLTList<AbstractGameList.E
 	}
 
 	@Override
-	protected void renderHeader(PoseStack matrixStack, int x, int y, Tesselator tessellator) {
-		this.minecraft.font.draw(
-				matrixStack, this.title,
-				x + (this.width - this.minecraft.font.width(this.title)) / 2.0F,
+	protected void renderHeader(GuiGraphics graphics, int x, int y) {
+		Font font = this.minecraft.font;
+		graphics.drawString(font,
+				this.title,
+				x + (this.width - font.width(this.title)) / 2,
 				Math.min(this.y0 + 3, y),
-				0xFFFFFF
+				CommonColors.WHITE
 		);
 	}
 	
@@ -81,32 +83,33 @@ public abstract class AbstractGameList extends AbstractLTList<AbstractGameList.E
 		}
 		
 		@Override
-		public void render(PoseStack matrixStack, int index, int top, int left, int width, int height, int mouseX, int mouseY, boolean hovered, float partialTicks) {
+		public void render(GuiGraphics graphics, int index, int top, int left, int width, int height, int mouseX, int mouseY, boolean hovered, float partialTicks) {
 			Font font = screen.getMinecraft().font;
 			int fontHeight = font.lineHeight;
 		
 			boolean selected = ((AbstractGameList)list).isSelectedItem(index);
 			boolean outline = banner || selected;
 		
-			this.fillEntry(matrixStack, left, top, width, height, hovered, selected, outline);
+			this.fillEntry(graphics, left, top, width, height, hovered, selected, outline);
 		
 			int maxTextWidth = getMaxTextWidth(width);
 		
 			if (subtitle != null) {
-				font.draw(matrixStack, title.forWidth(font, maxTextWidth), left + PADDING, top + PADDING + 1, 0xFFFFFF);
-				font.draw(matrixStack, subtitle.forWidth(font, maxTextWidth), left + PADDING, top + height - PADDING - fontHeight, 0x555555);
+				graphics.drawString(font, title.forWidth(font, maxTextWidth), left + PADDING, top + PADDING + 1, 0xFFFFFF);
+				graphics.drawString(font, subtitle.forWidth(font, maxTextWidth), left + PADDING, top + height - PADDING - fontHeight, 0x555555);
 			} else {
-				font.draw(matrixStack, title.forWidth(font, maxTextWidth), left + PADDING, top + (height - fontHeight) / 2, 0xFFFFFF);
+				graphics.drawString(font, title.forWidth(font, maxTextWidth), left + PADDING, top + (height - fontHeight) / 2, 0xFFFFFF);
 			}
 		}
 
 		@Override
-		public void renderTooltips(PoseStack matrixStack, int width, int mouseX, int mouseY) {
-			super.renderTooltips(matrixStack, width, mouseX, mouseY);
+		public void renderTooltips(GuiGraphics graphics, int width, int mouseX, int mouseY) {
+			super.renderTooltips(graphics, width, mouseX, mouseY);
 			TrimmedText subtitle = this.subtitle;
 			int maxTextWidth = getMaxTextWidth(width);
-			if (subtitle != null && subtitle.isTrimmedForWidth(screen.getMinecraft().font, maxTextWidth)) {
-				screen.renderComponentTooltip(matrixStack, ImmutableList.of(subtitle.text()), mouseX, mouseY);
+			Font font = screen.getMinecraft().font;
+			if (subtitle != null && subtitle.isTrimmedForWidth(font, maxTextWidth)) {
+				graphics.renderComponentTooltip(font, List.of(subtitle.text()), mouseX, mouseY);
 			}
 		}
 
@@ -154,7 +157,7 @@ public abstract class AbstractGameList extends AbstractLTList<AbstractGameList.E
 			return width - 2 * PADDING;
 		}
 
-		void fillEntry(PoseStack matrixStack, int left, int top, int width, int height, boolean hovered, boolean selected, boolean outline) {
+		void fillEntry(GuiGraphics graphics, int left, int top, int width, int height, boolean hovered, boolean selected, boolean outline) {
 			if (banner) {
 				top += 4;
 				height -= 8;
@@ -163,13 +166,13 @@ public abstract class AbstractGameList extends AbstractLTList<AbstractGameList.E
 			int fillColor = getFillColor(hovered, selected);
 
 			if (outline) {
-				fillEntry(matrixStack, left, top, width, height, outlineColor);
+				fillEntry(graphics, left, top, width, height, outlineColor);
 				if (fillColor != -1) {
-					fillEntry(matrixStack, left + 1, top + 1, width - 2, height - 2, fillColor);
+					fillEntry(graphics, left + 1, top + 1, width - 2, height - 2, fillColor);
 				}
 			} else {
 				if (fillColor != -1) {
-					fillEntry(matrixStack, left, top, width, height, fillColor);
+					fillEntry(graphics, left, top, width, height, fillColor);
 				}
 			}
 		}
@@ -184,8 +187,8 @@ public abstract class AbstractGameList extends AbstractLTList<AbstractGameList.E
 			}
 		}
 
-		private void fillEntry(PoseStack matrixStack, int left, int top, int width, int height, int color) {
-			AbstractGameList.fill(matrixStack, left, top, left + width, top + height, color);
+		private void fillEntry(GuiGraphics graphics, int left, int top, int width, int height, int color) {
+			graphics.fill(left, top, left + width, top + height, color);
 		}
 
 		public int getId() {
@@ -194,7 +197,7 @@ public abstract class AbstractGameList extends AbstractLTList<AbstractGameList.E
 
 		@Override
 		public Component getNarration() {
-			return Component.empty();
+			return CommonComponents.EMPTY;
 		}
 	}
 }
